# gkeeper

./: .dockerignore  .gcloudignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  e2e_test.sh  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  delivery.yml  endpoints.yml  pythonapp.yml  test.yml
configs/: config.toml
endpoint/: Makefile  README.md  openapi.yaml
endpoints/: Dockerfile  Makefile  README.md  openapi.yaml.j2
gkeeper/: configs.py  keeper.py
gkeeper/tests/: test_configs.py  test_keeper.py  test_main.py
gkeeper/tests/large/: test_main.py
lib/: configs.py
tests/: test_configs.py  test_keeper.py  test_main.py
tests/big/: test_main_big.py
tests/large/: test_main.py
