[tool.poetry]
name = "add-keep-shopping-list"
version = "0.1.0"
description = "google keepにアイテムを追加する"
authors = ["Ohnuki Takeshi <32025300+tktkc72@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gkeepapi = "^0.11.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.761"
autopep8 = "^1.4.4"
pytest = "^5.3.2"
pytest-mock = "^1.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
