[tool.poetry]
name = "gkeeper"
version = "0.1.0"
description = "google keep にアイテムを追加する"
authors = ["Ohnuki Takeshi <the.saki72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gkeepapi = "^0.11.9"
toml = "^0.10.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
flake8 = "^3.7.9"
autopep8 = "^1.4.4"
pytest = "^5.3.2"
pytest-mock = "^1.13.0"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
